Actualizar como hacer paquetes

--- a/PackageDevelop.Rmd
+++ b/PackageDevelop.Rmd
@@ -85,8 +85,7 @@ background-size: cover
 
 ## 1.1. Intro
 
-**Motivantes**
-
+**Problemas**
 - Repito pasos y análisis con datos similares...  
 .right[ _hasta ahora reciclo funciones de scripts anteriores_ ]
 
@@ -99,12 +98,11 @@ background-size: cover
 - Existen paquetes similares pero que no cubren con todos los pasos...   
 .right[  _uso partes de algunos paquetes y adapto a mi nuevo analisis_ ]
 
-- Quiero que otras personas puedan replicar mis análisis...   
-.right[ _quiero que las funciones esten accesibles_ ]
+**Motivantes**
 
+- Quiero que otras personas puedan replicar mis análisis y que las funciones esten accesibles.
 
-
-- Quiero hacer las funciones y documentación accesibles en ingles y español.  
+- Quiero hacer las funciones y documentación este en ingles y español.  
 
 ---
 
@@ -917,16 +915,55 @@ El ejemplo tiene mas de 100 characteres, es muy largo!.
 
 ---
 
-name: datos
+# 5. Ejercicios
+
+Crea tu propia funcion
+
+.panelset[
+.panel[.panel-name[Crear]
+```{r, eval=FALSE}
+usethis::use_r("nombre_funcion")
+```
+
+Insertar Roxigen Skeleton  (CTRL+ALT+SHIFT+R)
+]
+
+.panel[.panel-name[Documentar]
+```{r, eval=FALSE}
+devtools::document()
+```
+]
+
+.panel[.panel-name[Checar]
+```{r, eval=FALSE}
+devtools::check()
+```
+]
+
+.panel[.panel-name[Dependencias]
+```{r, eval=FALSE}
+usethis::use_package("ggplot2")
+```
+
+Referirse a funciones con ::
+]
+]
+
+
+
+
+
+---
+
+name: sticker
 class: title-slide, center, middle
 background-image: url(https://images.unsplash.com/photo-1518289646039-3e6c87a5aaf6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1351&q=80)
 background-size: cover
 
 `r text_spec("Stickers", background = "#000000", color = "white", bold = T, font_size=120)`
 
----
 
-## 5.0. Crear tu propio sticker
+# 6. Crear tu propio sticker
 
 - En powerpoint [plantilla hecha por Emi Tanaka](https://emitanaka.org/posts/hexsticker/) <br>
 - En R [paquete hexSticker hecho por GuangchuangYu](https://github.com/GuangchuangYu/hexSticker)
